src/objects/Member_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Stats</relationshipLabel>
        <relationshipName>Member_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activation_Rate__c</fullName>
        <formula>IF( Members_Invited__c = 0, 0, Members_Activated__c /  Members_Invited__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation % Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avg_Course_Grade__c</fullName>
        <label>Avg Course Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Duration_Minutes__c</fullName>
        <label>Avg Duration (Minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Page_Views__c</fullName>
        <label>Avg Page Views</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Activated__c</fullName>
        <label>Members Activated</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Deactivated__c</fullName>
        <label>Members Deactivated</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Invited__c</fullName>
        <label>Members Invited</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End__c</fullName>
        <label>Month End</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_del__c</fullName>
        <formula>DATE( VALUE(LEFT( Month_End__c , 4)) ,VALUE( MID( Month_End__c , 5, 2)) 
, VALUE( RIGHT(Month_End__c, 2) ))</formula>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Courses__c</fullName>
        <label>Number Courses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Page_Views__c</fullName>
        <label>Total Page Views</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Member Stats</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Member Stat Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>